-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 3.1.0-beta
-
None
-
RHEL6
gcc version 4.4.7 20120313 (Red Hat 4.4.7-3) (GCC)
-
88255a68815cc245de4147ce6f7419539f7c3a84
gmake[3]: Entering directory `/tmp/git/qt-creator/src/plugins/qmlprofiler'
g++ -c -pipe -O2 -fvisibility=hidden -fvisibility-inlines-hidden -std=c++0x -Wall -W -D_REENTRANT -fPIC -DQMLPROFILER_LIBRARY -DIDE_LIBRARY_BASENAME
=\"lib\" -DQT_CREATOR -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DQT_USE_FAST_OPERATOR_PLUS -DQT_USE_FAST_CONCATENATION -DQT_DISABLE_DEPRECATED_
BEFORE=0x040900 -DQMAKE_AS_LIBRARY -DPROPARSER_THREAD_SAFE -DPROEVALUATOR_THREAD_SAFE -DPROEVALUATOR_CUMULATIVE -DPROEVALUATOR_SETENV -DQT_NO_DEBUG
-DQT_PLUGIN -DQT_QUICK_LIB -DQT_QML_LIB -DQT_WIDGETS_LIB -DQT_CONCURRENT_LIB -DQT_NETWORK_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I/tmp/qt/mkspecs/linux-g++
-I. -I../../../src -I../../libs -I/tmp/git/qt-creator/tools -I../../plugins -I../../shared -I../../libs/3rdparty -I/tmp/qt/include -I/tmp/qt/includ
e/QtQuick -I/tmp/qt/include/QtQml -I/tmp/qt/include/QtWidgets -I/tmp/qt/include/QtConcurrent -I/tmp/qt/include/QtNetwork -I/tmp/qt/include/QtGui -I/
tmp/qt/include/QtCore -I.moc/release-shared -o .obj/release-shared/qmlprofilertimelinemodelproxy.o qmlprofilertimelinemodelproxy.cpp
qmlprofilertimelinemodelproxy.cpp: In member function 'virtual void QmlProfiler::Internal::BasicTimelineModel::clear()':
qmlprofilertimelinemodelproxy.cpp:83: error: 'template<class Data, class Base> class QmlProfiler::SortedTimelineModel' used without template paramet
ers
gmake[3]: Entering directory `/tmp/git/qt-creator/src/plugins/qmlprofiler'
g++ -c -pipe -O2 -fvisibility=hidden -fvisibility-inlines-hidden -std=c++0x -Wall -W -D_REENTRANT -fPIC -DQMLPROFILER_LIBRARY -DIDE_LIBRARY_BASENAME
=\"lib\" -DQT_CREATOR -DQT_NO_CAST_TO_ASCII -DQT_NO_CAST_FROM_ASCII -DQT_USE_FAST_OPERATOR_PLUS -DQT_USE_FAST_CONCATENATION -DQT_DISABLE_DEPRECATED_
BEFORE=0x040900 -DQMAKE_AS_LIBRARY -DPROPARSER_THREAD_SAFE -DPROEVALUATOR_THREAD_SAFE -DPROEVALUATOR_CUMULATIVE -DPROEVALUATOR_SETENV -DQT_NO_DEBUG
-DQT_PLUGIN -DQT_QUICK_LIB -DQT_QML_LIB -DQT_WIDGETS_LIB -DQT_CONCURRENT_LIB -DQT_NETWORK_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I/tmp/qt/mkspecs/linux-g++
-I. -I../../../src -I../../libs -I/tmp/git/qt-creator/tools -I../../plugins -I../../shared -I../../libs/3rdparty -I/tmp/qt/include -I/tmp/qt/includ
e/QtQuick -I/tmp/qt/include/QtQml -I/tmp/qt/include/QtWidgets -I/tmp/qt/include/QtConcurrent -I/tmp/qt/include/QtNetwork -I/tmp/qt/include/QtGui -I/
tmp/qt/include/QtCore -I.moc/release-shared -o .obj/release-shared/qmlprofilerpainteventsmodelproxy.o qmlprofilerpainteventsmodelproxy.cpp
qmlprofilerpainteventsmodelproxy.cpp: In member function 'virtual void QmlProfiler::Internal::PaintEventsModelProxy::clear()':
qmlprofilerpainteventsmodelproxy.cpp:77: error: 'template<class Data, class Base> class QmlProfiler::SortedTimelineModel' used without template para
meters
For Gerrit Dashboard: QTCREATORBUG-12010 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
83106,1 | QmlProfiler: No need to qualify calls to SortedTimelineModel::clear() | 3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
129667,1 | No need to qualify calls to SortedTimelineModel::clear() | qp-3.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
129992,1 | No need to qualify calls to SortedTimelineModel::clear() | qp-master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |