QmlProfiler: No need to qualify calls to SortedTimelineModel::clear()

Task-number: QTCREATORBUG-12010
Change-Id: Idad222578a103f135c16d820c2e59172671ee048
Reviewed-by: Eike Ziller <eike.ziller@digia.com>
Reviewed-by: Kai Koehne <kai.koehne@digia.com>